gave the footer grid styles

--- a/index.html
+++ b/index.html
@@ -179,11 +179,9 @@
                     </article>
 
                     <article class="footer-copyright-content">
-                        <footer class="footer-grid">
-                            <article class="footer-item">
-                              <p>© 2024 Lucky Shrub. All Rights Reserved.</p>
-                              <p>Designed with ❤️ by GreenWeb Designs</p>
-                            </article>
+
+                    <article class="footer-grid">
+
 
                             <article class="footer-item">
                               <p>
@@ -202,14 +200,28 @@
                             </article>
 
                             <article class="footer-item">
+                                Follow Us:
                               <p>
-                                Follow Us:<br>
-                                🌿 Facebook: <a href="https://www.facebook.com/LuckyShrubGardens" target="_blank">@LuckyShrubGardens</a><br>
-                                📸 Instagram: <a href="https://www.instagram.com/LuckyShrub_Insta" target="_blank">@LuckyShrub_Insta</a><br>
+                                <span>
+                                🌿 Facebook: <a href="https://www.facebook.com/LuckyShrubGardens" target="_blank">@LuckyShrubGardens</a>
+                                </span>
+
+                                <span>
+                                    📸 Instagram: <a href="https://www.instagram.com/LuckyShrub_Insta" target="_blank">@LuckyShrub_Insta</a>
+                                </span>
+
+                                <span>
                                 🐦 Twitter: <a href="https://twitter.com/LuckyShrub_Tweets" target="_blank">@LuckyShrub_Tweets</a>
+                                </span>
                               </p>
                             </article>
                     </article>
+                    <article class="footer-item">
+                        <p>© 2024 Lucky Shrub. All Rights Reserved.
+                            Designed with ❤️ by GreenWeb Designs</p>
+                    </article>
+                    </article>
+
                 </footer>
     </main>
 
