added styles for all screen sizes

--- a/index.html
+++ b/index.html
@@ -55,12 +55,12 @@
                 <!-- This is the products section -->
                 <section id="product-section">
 
+                    <article class="product-headline">
+                        <h2> Green Living, Redefined </h2>
+                            <p>
+                            Explore our sustainable and stylish garden products, fostering a greener lifestyle with ease </p>
+                        </article>
                     <article class="product-section-wrapper">
-                        <article class="product-headline">
-                            <h2> Green Living, Redefined </h2>
-                                <p>
-                                Explore our sustainable and stylish garden products, fostering a greener lifestyle with ease </p>
-                            </article>
                         <article class="garden-design-and-creation  product-card">
                             <article class="product-image-container">
                                 <img src="./images/garden-design.jpg" width="200" class="product-img" />
@@ -158,6 +158,14 @@
 
                 <!-- Newsletter -->
                 <section id="newsletter-section">
+                    <article class="newsletter-headline">
+                       <h2> Join our most vibrant community</h2>
+                       <p>
+                        Get the latest about garden design and landscaping from
+                        our weekly newsletter.
+
+                       </p>
+                        </article>
                     <article class="newsletter-wrapper">
                         <form >
                             <label for="email">
@@ -180,46 +188,46 @@
 
                     <article class="footer-copyright-content">
 
-                    <article class="footer-grid">
+                        <article class="footer-grid">
 
 
-                            <article class="footer-item">
-                              <p>
-                                📞 Contact Us: <a href="tel:+1234567890">+123-456-7890</a><br>
-                                📧 Email: <a href="mailto:info@luckyshrub.com">info@luckyshrub.com</a>
-                              </p>
-                            </article>
+                                <article class="footer-item">
+                                <p>
+                                    📞 Contact Us: <a href="tel:+1234567890">+123-456-7890</a><br>
+                                    📧 Email: <a href="mailto:info@luckyshrub.com">info@luckyshrub.com</a>
+                                </p>
+                                </article>
 
-                            <article class="footer-item">
-                              <p>
-                                📍 Visit Us:<br>
-                                Lucky Shrub Gardens<br>
-                                123 Tranquil Terrace,<br>
-                                Tucson, Arizona, 85701, USA
-                              </p>
-                            </article>
+                                <article class="footer-item">
+                                <p>
+                                    📍 Visit Us:<br>
+                                    Lucky Shrub Gardens<br>
+                                    123 Tranquil Terrace,<br>
+                                    Tucson, Arizona, 85701, USA
+                                </p>
+                                </article>
 
-                            <article class="footer-item">
-                                Follow Us:
-                              <p>
-                                <span>
-                                🌿 Facebook: <a href="https://www.facebook.com/LuckyShrubGardens" target="_blank">@LuckyShrubGardens</a>
-                                </span>
+                                <article class="footer-item">
+                                    Follow Us:
+                                <p>
+                                    <span>
+                                    🌿 Facebook: <a href="https://www.facebook.com/LuckyShrubGardens" target="_blank">@LuckyShrubGardens</a>
+                                    </span>
 
-                                <span>
-                                    📸 Instagram: <a href="https://www.instagram.com/LuckyShrub_Insta" target="_blank">@LuckyShrub_Insta</a>
-                                </span>
+                                    <span>
+                                        📸 Instagram: <a href="https://www.instagram.com/LuckyShrub_Insta" target="_blank">@LuckyShrub_Insta</a>
+                                    </span>
 
-                                <span>
-                                🐦 Twitter: <a href="https://twitter.com/LuckyShrub_Tweets" target="_blank">@LuckyShrub_Tweets</a>
-                                </span>
-                              </p>
-                            </article>
-                    </article>
-                    <article class="footer-item">
-                        <p>© 2024 Lucky Shrub. All Rights Reserved.
-                            Designed with ❤️ by GreenWeb Designs</p>
-                    </article>
+                                    <span>
+                                    🐦 Twitter: <a href="https://twitter.com/LuckyShrub_Tweets" target="_blank">@LuckyShrub_Tweets</a>
+                                    </span>
+                                </p>
+                                </article>
+                        </article>
+                        <article class="footer-item">
+                            <p>© 2024 Lucky Shrub. All Rights Reserved.
+                                Designed with ❤️ by GreenWeb Designs</p>
+                        </article>
                     </article>
 
                 </footer>
